HW 10. Implementation PayBasket

--- a/GBShop/Resources/en.lproj/Localizable.strings
+++ b/GBShop/Resources/en.lproj/Localizable.strings
@@ -20,9 +20,13 @@
 "E-mail" = "e-mail";
 "Credit card" = "Credit card";
 "Bio" = "About";
+"First name" = "First name";
+"Address" = "Address";
+"Phone number" = "Phone number";
 
 "authButton" = "Log in";
 "signUpButton" = "Sign Up";
 "changeUserDataButton" = "Edit profile";
 "confirmButton" = "Confirm";
 "logoutButton" = "Logout";
+"payBasketButton" = "Pay your order";
